kustomize/mako-dashboard-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mako-dashboard-web
  annotations:
    cloud.google.com/backend-config: '{"default": "mako-dashboard-web-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 4201
      targetPort: 4201
      protocol: TCP
      name: http
  selector:
    app: mako-dashboard-web
