kustomize/mako-dashboard-web/ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mako-dashboard-web
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mako-ingress-ip"
    networking.gke.io/managed-certificates: "mako-bank-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
      - dashboard.mako-bank.com
      secretName: mako-bank-tls
  rules:
    - host: dashboard.mako-bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mako-dashboard-web
                port:
                  name: http
