kustomize/mako-dashboard-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mako-dashboard-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.mako-bank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mako-dashboard-web
                port:
                  name: http
